cmake_minimum_required(VERSION 3.19)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(problem001 problem1.cpp)
add_executable(problem002 problem2.cpp ListNode.cpp)
add_executable(problem003 problem3.cpp)
add_executable(problem004 problem4.cpp)
add_executable(problem005 problem5.cpp)
add_executable(problem009 problem9.cpp)
add_executable(problem016 problem16.cpp)
add_executable(problem094 problem94.cpp TreeNode.cpp)
add_executable(problem123 problem123.cpp)
add_executable(problem129 problem129.cpp TreeNode.cpp)
add_executable(problem133 problem133.cpp)
add_executable(problem137 problem137.cpp)
add_executable(problem144 problem144.cpp TreeNode.cpp)
add_executable(problem145 problem145.cpp TreeNode.cpp)
add_executable(problem147 problem147.cpp ListNode.cpp)
add_executable(problem151 problem151.cpp)
add_executable(problem153 problem153.cpp)
add_executable(problem154 problem154.cpp)
add_executable(problem205 problem205.cpp)